<resources>
    <string name="app_name">MarketXilla</string>
    <string name="every_new_release_is_better_than_the_last">Every new release is better than the last, so why lag behind. Upgrade now and enjoy the best version yet!</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="strExit">Do you want to close the application?</string>
    <string name="alert">Alert</string>
    <string name="about_us">ABOUT US</string>
    <string name="contact_us">CONTACT US</string>
    <string name="share">Share</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_page"><a href="https://www.facebook.com/marketxilla" rel="nofollow">https://www.facebook.com/marketxilla</a></string>
    <string name="twitter_page"><a href="https://twitter.com/marketxilla" rel="nofollow">https://twitter.com/marketxilla</a></string>
    <string name="linked_in_page"><a href="https://www.linkedin.com/in/marketxilla/" rel="nofollow">https://www.linkedin.com/in/marketxilla/</a></string>
    <string name="telegram"><a href="https://telegram.me/marketxilla" rel="nofollow">https://telegram.me/marketxilla</a></string>
    <string name="menu_rate_us">RATE US</string>
    <string name="menu_share">SHARE</string>
    <string name="pcakage1_desc">This pack is valid for one month from the next day of your subscription till the same date of the next month. (Including Saturday, Sunday, and Holidays.)</string>
    <string name="package2_desc">This pack is valid for two months from the next day of your subscription till the same date of the next two months. (Including Saturday, Sunday, and Holidays.)</string>
    <string name="package3_desc">This pack is valid for three months from the next day of your subscription till the same date of the next three months. (Including Saturday, Sunday, and Holidays.)</string>
    <string name="title_home">Home</string>
    <string name="title_market">Market</string>
    <string name="title_news">News</string>
    <string name="title_package">Packages</string>
    <string name="title_paid_user">Paid User</string>
    <string name="drawer_open">DRAWER OPEN</string>
    <string name="drawer_close">DRAWER CLOSED</string>
    <string name="title_holiday">Holidays</string>
    <string name="privacy_policy">PRIVACY POLICIES</string>
    <string name="terms_n_condition"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="subscription">SUBSCRIPTION</string>
    <string name="my_subscription">MY SUBSCRIPTION</string>
    <string name="sliver">SILVER</string>
    <string name="plan_msg1">Sliver plan includes daily 2 to 3 \n recommendations of Stock Future and options.</string>
    <string name="plan_msg2">Glod plan includes daily recommendations of 2 to 3 Stock Future \n and Options,1 and 2 of Index Future and \n options.(Notes - Index recommendation is depend upon the market conditions).</string>
    <string name="plan_msg3">Platinum plan includes daily recommendations of 2 to 3 Stock Future \n and Options,1 and 2 of Index Future and \n options and 3 to 4 in commodity segment.(Notes - Index recommendation is depend upon the market conditions).</string>
    <string name="plan_msg4">Future Special plan includes daily 4 to 5 \n recommendations of Stock Future and Index Future.</string>
    <string name="plan_msg5">Options Special plan includes daily 4 to 5 \n recommendations of Stock Option and Index Option.</string>
    <string name="plan_msg6">Commodity Special plan includes daily 4 to 6 \n recommendations of Bullion,Energy, and Base Metal in the Commodity \n segament.</string>
    <string name="basic">BASIC</string>
    <string name="standered">STANDERED</string>
    <string name="gold">GOLD</string>
    <string name="platinum">PLATINUM</string>
    <string name="future_special">FUTURE SPECIAL</string>
    <string name="optionsspecial">OPTIONS SPECIAL</string>
    <string name="commodityspecial">COMMODITY SPECIAL</string>

    <string name="bank_account_details_for_donation">BANK ACCOUNT DETAILS</string>
    <string name="bank_name">Bank Name : </string>
    <string name="ifsc_code">IFSC Code : </string>
    <string name="bank_branch">Bank Branch :</string>
    <string name="beneficiary_name">Beneficiary Name :</string>
    <string name="account_number">Account Number :</string>
    <string name="upi_id">UPI ID :</string>
    <string name="upi_merchant_name">UPI Merchant Name :</string>


    <string name="stock_future">STOCK (Future)</string>
    <string name="stock_options">STOCK (Options)</string>
    <string name="index_future">INDEX (Future)</string>
    <string name="index_options">INDEX (Options)</string>
    <string name="commodity">COMMODITY</string>
    <string name="telegram_updates">TELEGRAM UPDATES</string>
    <string name="month">1 month</string>
    <string name="special">SPECIAL</string>
    <string name="premium">PREMIUM</string>
    <string name="str_loading">Loading</string>


    <string-array name="spin_item_package">
        <item>Select Package</item>
        <item>1 Month</item>
        <item>2 Month</item>
        <item>3 Month</item>
    </string-array>

    <string-array name="spin_item_calls">
        <item>Select To See Past Performance</item>
        <item>Today Calls</item>
        <item>Past Performance</item>
    </string-array>

    <string-array name="spin_item_segments">
        <item>All Segments</item>
        <item>Paid Calls</item>
        <item>Stock Future</item>
        <item>Stock Option</item>
        <item>Index Future</item>
        <item>Index Option</item>
        <item>Commodity</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trade_calculators">TRADE CALCULATORS</string>
    <string name="classic_pivot">CLASSIC / FLOOR PIVOT</string>
    <string name="fibonacci_pivot">FIBONACCI PIVOT</string>
    <string name="camerilla_pivot">CAMERILLA PIVOT</string>
    <string name="forex_pivot">FOREX PIVOT</string>
    <string name="woodie_s_pivot">WOODIE\'s PIVOT</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="current_password">Enter Current Password</string>
    <string name="check_junk_str">Simply check your mail inbox for the email we have just sent you. If it is not there, please check your junk mail folder and if it is in the junk mail folder, remember to mark the email as \n * Not Junk *.</string>
    <string name="resend_otp">RESEND OTP</string>

    <!--PAY U STRINGS-->
    <string name="some_error_occurred">Some error occurred...</string>
    <string name="transaction_cancelled_by_user">Transaction cancelled by user</string>
    <string name="pay_via_si">Pay using SI</string>
    <string name="billingCycle">billingCycle</string>
    <string name="api_version">api_version</string>
    <string name="si">si</string>
    <string name="billingInterval">billingInterval</string>
    <string name="billingAmount">billingAmount</string>
    <string name="billingCurrency">billingCurrency</string>
    <string name="paymentStartDate">paymentStartDate</string>
    <string name="paymentEndDate">paymentEndDate</string>
    <string name="remarks">remarks</string>
    <string name="si_date_hint">YYYY-MM-DD</string>
    <string name="free_trial">Free Trial</string>
    <string name="prod_ad_unit_id">ca-app-pub-7875930800675907/2647487053</string>
    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_adds_app_id">ca-app-pub-7875930800675907~9539364314</string>
    <string name="audio_permission_text">We need <b> AUDIO </b> permission to make your Glucometer work.</string>
    <string name="get_started">Get Started</string>
</resources>