<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_subscription"
            android:icon="@drawable/ic_payment"
            android:iconTint="@color/black"
            android:title="@string/my_subscription" />

        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/ic_calc"
            android:iconTint="@color/black"
            android:title="@string/trade_calculators" />


        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info"
            android:iconTint="@color/black"
            android:title="@string/about_us" />


        <item
            android:id="@+id/nav_disclaimer"
            android:icon="@drawable/ic_info"
            android:iconTint="@color/black"
            android:title="@string/disclaimer" />

        <item
            android:id="@+id/nav_terms_n_condition"
            android:icon="@drawable/ic_info"
            android:iconTint="@color/black"
            android:title="@string/terms_n_condition" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_info"
            android:iconTint="@color/black"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_phone_android"
            android:iconTint="@color/black"
            android:title="@string/contact_us" />


        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_rating"
            android:iconTint="@color/black"

            android:title="@string/menu_rate_us" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:iconTint="@color/black"
            android:title="@string/menu_share" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:iconTint="@color/black"

            android:title="@string/menu_logout" />
    </group>



</menu>
