<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

   <!-- <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/marketing"
        android:title="@string/title_market" />-->

    <item
        android:id="@+id/navigation_holiday"
        android:icon="@drawable/holiday"
        android:title="@string/title_holiday" />

    <item
        android:id="@+id/navigation_package"
        android:icon="@drawable/icons_cart"
        android:title="@string/title_package"   />

    <item
        android:id="@+id/navigation_paid_user"
        android:icon="@drawable/icons_user"
        android:title="@string/title_paid_user" />
    


</menu>