<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolback_with_back" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="60dp"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="GANN"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_bg_color" />

            <TextView
                android:id="@+id/gann_cart_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="GANN SQUARE Of 9" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="PIVOT"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg_color" />

            <TextView
                android:id="@+id/classic_pivot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/classic_pivot" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg_color" />

            <TextView
                android:id="@+id/fibaonacci_pivot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"

                android:paddingVertical="8dp"
                android:text="@string/fibonacci_pivot" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg_color" />

            <TextView
                android:id="@+id/camerilla_pivot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"

                android:text="@string/camerilla_pivot" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg_color" />

            <TextView
                android:id="@+id/forex_pivot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"

                android:text="@string/forex_pivot" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg_color" />

            <TextView
                android:id="@+id/woddie_pivot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"

                android:text="@string/woodie_s_pivot" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>