<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/cw_button_shadow_primary"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40sp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="BANK DETAILS"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_close"
            android:tint="@color/white"
            android:visibility="visible"
            tools:ignore="UseAppTint" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="5"
            app:cardBackgroundColor="@android:color/white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/bank_account_details_for_donation"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal"
                        android:weightSum="10">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/beneficiary_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_beneficiary_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="5"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal"
                        android:weightSum="10">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/account_number"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_account_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="5"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/bank_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_bank_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="5"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/ifsc_code"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_bank_ifsc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="5"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/bank_branch"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_bank_branch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="5"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="FOR UPI MODE OF PAYMENT"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/upi_id"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_upi_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="5"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/upi_merchant_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_upi_merchant_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="5"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="Please make the payment on above mention bank details and share the transaction receipt on WhatsApp: +919022409928 or Mail: marketxilla@gmail.com"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnOk"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/cw_shadow_black"
                        android:gravity="center"
                        android:text="OK"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>